# sysexts-manager

./: .gitignore  Cargo.toml  README.md  REUSE.toml  TODO.md  bump_version.sh  justfile
.github/: Containerfile.buildroot  dependabot.yml
.github/actions/gather/: action.yml
.github/workflows/: buildroot.yml  reuse-lint.yml  rust.yaml  rust.yml  sysext.yml  zizmor.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: arch.rs  config.rs  image.rs  lib.rs  manager.rs  ostree.rs  sha256writer.rs  sysext.rs
lib/test-data/invalid_release/etc/: os-release
lib/test-data/invalid_release/etc/sysexts-manager/: duck.conf  foo.conf
lib/test-data/no_valid_sysext/etc/sysexts-manager/: test.conf
lib/test-data/valid_version_latest/etc/sysexts-manager/: bar.conf
lib/tests/: symlink.rs
src/: main.rs  ostree.rs
sysexts-manager/: justfile  sysext.just
sysexts-manager/usr/lib/sysexts-manager/: sysexts-manager.conf
sysexts-manager/usr/lib/systemd/system/: sysexts-manager.service
test-data/: basic-test.sh  parallel-downloads.sh
test/etc/sysext-manager/: foo.conf
test/run/extensions/: foo.raw  test.raw
test2/run/extensions/: test.raw
tests/: basic-test.sh  parallel-downloads.sh  setup.sh
