[package]
name = "sysexts-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
cap-std = "3.4.4"
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
os-release = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
version-compare = "0.2.0"
