[package]
description = "sysext-manager command line interface"
name = "sysexts-manager"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/travier/sysexts-manager"
default-run = "sysexts-manager"
rust-version = "1.85.0"

[dependencies]
sysexts-manager-lib = { version = "*", path = "../lib" }
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
rayon = "1.10.0"
