# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr>
# SPDX-License-Identifier: CC0-1.0

[package]
description = "sysext-manager command line interface"
name = "sysexts-manager"
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/travier/sysexts-manager"
default-run = "sysexts-manager"
rust-version = "1.85.0"

[dependencies]
sysexts-manager-lib = { version = "*", path = "../lib" }
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
rayon = "1.11.0"
