# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr
# SPDX-License-Identifier: CC0-1.0

[package]
description = "sysext manager implementation"
name = "sysexts-manager-lib"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/travier/sysexts-manager"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.100"
cap-std = "3.4.4"
log = "0.4.28"
os-release = "0.1.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4.3"
sha2 = "0.10.9"
toml = "0.9.7"
version-compare = "0.2.0"
rayon = "1.11.0"
