# SPDX-FileCopyrightText: Timothée Ravier <tim@siosm.fr
# SPDX-License-Identifier: CC0-1.0

[package]
description = "sysext manager implementation"
name = "sysexts-manager-lib"
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/travier/sysexts-manager"
rust-version = "1.85.0"

[dependencies]
anyhow = "1.0.100"
cap-std = "4.0.0"
log = "0.4.29"
os-release = "0.1.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
hex = "0.4.3"
sha2 = "0.10.9"
toml = "0.9.10"
version-compare = "0.2.0"
rayon = "1.11.0"
